# alfs-ocr

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.l4t  build.sh  docker-compose.gpu.yaml  docker-compose.yml  mypy.ini  pyproject.toml  setup.py  train_yolox.py
.circleci/: config.yml
alfs_char/: __init__.py  bench.py  config.py  data.py  predict.py  store.py  train.py  transforms.py  web.py  yolox.py
alfs_char/config/: yolox.yaml
config/: yolox.yaml
tests/: test_data.py  test_web.py  test_yolox.py
